--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -23,7 +23,9 @@ $fontSize: rem(16); // де 14(px) - розмір шрифту за замовч
 
 // Основні кольори
 $mainColor: #fff; // Колір шрифту за замовчуванням
-
+html {
+  background: #a249ff;
+}
 // Налаштування адаптивної сітки ===============================================================================================================================================================================================================================================================================================
 
 // Мінімальна ширина сторінки
@@ -66,7 +68,6 @@ html {
   @media (max-width: $mobile) {
     --space: 16px;
     --border-radius: 10px;
-    --height: 34px;
   }
   @media (max-width: $mobileSmall) {
     --space: 10px;
