--- a/src/scss/sections.scss
+++ b/src/scss/sections.scss
@@ -1,2 +1,5 @@
 @import 'sections/main-block';
 @import 'sections/level';
+@import 'sections/history';
+@import 'sections/about';
+@import 'sections/pool';
