--- a/src/scss/sections/pool.scss
+++ b/src/scss/sections/pool.scss
@@ -34,7 +34,7 @@
   background: linear-gradient(101.33deg, #a249ff -1.74%, #25004d 100.61%);
   border: 1px solid #7e34cb;
   border-radius: var(--border-radius);
-  padding: rem(20) rem(0) rem(30);
+  padding: rem(20) rem(0) rem(0);
   @media (max-width: $tablet) {
     padding: rem(10) rem(0) rem(30);
   }
@@ -249,11 +249,6 @@
   }
   // .item-pool__details
   &__details {
-    position: absolute;
-    background: rgba(255, 255, 255, 0.2);
-    border-radius: 0px 0px var(--border-radius) var(--border-radius);
-    bottom: 0;
-    left: 0;
     width: 100%;
     padding: 5px;
     font-weight: 500;
@@ -264,12 +259,27 @@
     justify-content: center;
     gap: rem(2);
     transition: all 0.3s cubic-bezier(0.5, 0.02, 0.13, 0.5);
-    &:hover {
-      background: rgba(255, 255, 255, 0.4);
+    &._spoller-active {
+      img {
+        transform: rotate(180deg);
+      }
     }
     img {
       width: 8px;
       flex-shrink: 0;
+      transition: all 0.3s cubic-bezier(0.5, 0.02, 0.13, 0.5);
     }
+  }
+}
+.pool-spollers {
+  &__item {
+    border-radius: 0px 0px var(--border-radius) var(--border-radius);
+    background: rgba(255, 255, 255, 0.2);
+  }
+  &__body {
+    font-size: 12px;
+    line-height: math.div(18, 12);
+    color: rgba(255, 255, 255, 0.5);
+    padding: rem(0) rem(20) rem(12) rem(16);
   }
 }
