--- a/src/scss/sections/pool.scss
+++ b/src/scss/sections/pool.scss
@@ -36,7 +36,7 @@
   border-radius: var(--border-radius);
   padding: rem(20) rem(0) rem(0);
   @media (max-width: $tablet) {
-    padding: rem(10) rem(0) rem(30);
+    padding: rem(10) rem(0) rem(0);
   }
   // .item-pool__head
   &__head {
@@ -257,9 +257,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    background: rgba(255, 255, 255, 0.2);
+    border-radius: 0px 0px var(--border-radius) var(--border-radius);
     gap: rem(2);
     transition: all 0.3s cubic-bezier(0.5, 0.02, 0.13, 0.5);
     &._spoller-active {
+      padding: 10px 5px;
       img {
         transform: rotate(180deg);
       }
@@ -272,14 +275,31 @@
   }
 }
 .pool-spollers {
+  .item-pool__profit {
+    padding: 17px 20px;
+    position: relative;
+    &::after {
+      content: '';
+      top: 0;
+      left: 0;
+      width: 100%;
+      position: absolute;
+      height: 1px;
+      background: linear-gradient(
+        270deg,
+        rgba(255, 255, 255, 0) -2.63%,
+        rgba(255, 255, 255, 0.4) 47.62%,
+        rgba(255, 255, 255, 0) 100%
+      );
+    }
+  }
   &__item {
+    display: flex;
+    flex-direction: column-reverse;
     border-radius: 0px 0px var(--border-radius) var(--border-radius);
-    background: rgba(255, 255, 255, 0.2);
+  }
+  &__button {
   }
   &__body {
-    font-size: 12px;
-    line-height: math.div(18, 12);
-    color: rgba(255, 255, 255, 0.5);
-    padding: rem(0) rem(20) rem(12) rem(16);
   }
 }
